syntax = "proto3";

package short_url;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-validate/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/3FanYu/url-shortener-go";

service UrlShortener {
    rpc CreateShortUrl(CreateShortUrlReq) returns (CreateShortUrlResp){
        option (google.api.http) = {
            post: "/api/short_url"
            body: "*"
            response_body: "short_url"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "200"
                value: {
                    description: "Short URL generated."
                }
            }
        };
    }

    rpc RedirectToShortUrl(RedirectToShortUrlReq) returns (RedirectToShortUrlResp){
        option (google.api.http) = {
            get: "/"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "302"
                value: {
                    description: "Redirect to original URL."
                }
            }
        };
    }
}

message ShortUrl {
    string short_url = 1;
    string original_url = 2;
}

message CreateShortUrlReq {
    string url = 1;
}

message CreateShortUrlResp {
    ShortUrl short_url = 1;
}

message RedirectToShortUrlReq {
    string short_url = 1;
}

message RedirectToShortUrlResp {
    string url = 1;
}